--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1219,6 +1219,30 @@ input.header-mobile__search-control {
         padding: 35px 0 47px 0;
     }
 } */
+.select2-container--bootstrap4 .select2-dropdown .select2-results__option[aria-selected=true] {
+    background-color: #bdbdbd;
+    color: black;
+}
+.select2-container--bootstrap4 .select2-selection--multiple .select2-selection__choice {
+    color: black;
+    border: 1px solid black;
+    border-radius: 0.5rem;
+    padding: 0 5px 0 0;
+    cursor: pointer;
+    float: left;
+    margin-top: .3em;
+    margin-right: 5px;
+}
+.select2-container--bootstrap4 .select2-selection--multiple .select2-selection__choice__remove {
+    color: black;
+    font-weight: 700;
+    margin-left: 3px;
+    margin-right: 1px;
+    padding-right: 3px;
+    padding-left: 3px;
+    float: left;
+}
+
 
 @media (min-width: 992px) {
     .nav-account .nav-account__item.has-children:hover ul {
